adds password validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ tyne.security.hash-iterations=870000
 tyne.security.hash-algorithm=PBKDF2WithHmacSHA256
 tyne.security.hash-len=256
 tyne.security.salt-len=16
+tyne.security.common-passwords-file=src/main/resources/static/auth/common-passwords.txt
+tyne.security.password-min-len=9
+tyne.security.max-password-similarity=0.7
