adds userdetails and jwt provider

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 
+tyne.security.secret-key=vTuxIV6P1iOL5aPTND7dmUoGCSaMQ6tY8RRIz1nqnlY=
+tyne.security.token-expiration-time=18000
 tyne.security.hash-iterations=870000
 tyne.security.hash-algorithm=PBKDF2WithHmacSHA256
 tyne.security.hash-len=256
