--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>commons-text</artifactId>
             <version>1.11.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.12.3</version>
+        </dependency>
     </dependencies>
 
     <build>
