update default user group

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@ tyne.security.salt-len=16
 tyne.security.common-passwords-file=src/main/resources/static/auth/common-passwords.txt
 tyne.security.password-min-len=9
 tyne.security.max-password-similarity=0.7
-tyne.security.normal-user-group-id=2
+
+tyne.auth.normal-user-group-name=NormalUser
