--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ logging.level.web=debug
 
 # DB
 spring.datasource.url=jdbc:mysql://localhost:3306/tyne_finance
-spring.datasource.username=tyne
-spring.datasource.password=finance&music
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
@@ -21,3 +21,4 @@ tyne.security.password-min-len=9
 tyne.security.max-password-similarity=0.7
 
 tyne.auth.normal-user-group-name=NormalUser
+tyne.auth.white-endpoints=/core/sign-in, /core/sign-up
