fix timezone issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jackson.time-zone=UTC
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 tyne.security.secret-key=vTuxIV6P1iOL5aPTND7dmUoGCSaMQ6tY8RRIz1nqnlY=
 tyne.security.token-expiration-time=10800000
